chaged navbar spacing and fixed backround

--- a/frontend/src/stylesheets/App.css
+++ b/frontend/src/stylesheets/App.css
@@ -14,7 +14,7 @@
 }
 
 .sidebar-occupy-width{
-  width: 650px;
+  /*remove with because it was creating to much space */
   height: 100%;
 }
 
