--- a/frontend/src/stylesheets/splash.css
+++ b/frontend/src/stylesheets/splash.css
@@ -34,7 +34,7 @@
     font-size: 26px;
     max-width: 700px;
     -webkit-text-stroke-color: black;
-    -webkit-text-stroke-width: 1.40px
+    -webkit-text-stroke-width: 1.10px
 
 }
 
@@ -57,9 +57,12 @@
 }
 .start-btn{
     padding-top:5px;
-    font-weight: 900;
-    font-size: 17px;
+    font-weight: bold;
+    font-size: 16px;
     font-family: Marker Felt, fantasy;
+    color:yellow;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: .30px;
     width: 100px;
     height: 50px;
     border-radius: 25px;
@@ -80,7 +83,7 @@
     margin-bottom: 8vh;
     font-size: 30px;
     -webkit-text-stroke-color: black;
-    -webkit-text-stroke-width: 2.00px
+    -webkit-text-stroke-width: 1.00px
 }
 .photo-description{
     display: flex;
@@ -136,29 +139,41 @@
 }
 
 .bodega-img{
-    position: absolute;
+    /* position: absolute;
     background-repeat: no-repeat;
     background-size: auto;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1; */
+    position: fixed; 
+    top: 0; 
     left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
     z-index: -1;
+    min-width: 1024px;
+    min-height: 100%;
+
+ 
   }
 
   .bodega-img-splash{
-    position: absolute;
+    /* position: absolute;
     background-repeat: no-repeat;
     background-size: auto;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     z-index: -1;
+    filter: blur(6px); */
+
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    z-index: -1;
+    min-width: 100%;
+    min-height: 100%;
     filter: blur(6px);
   }
 
@@ -171,9 +186,11 @@
     width: 42px;
     height: 48px;
     color: rgb(184, 34, 50);
+    
     /* filter: invert(100%) sepia(84%) saturate(4267%) hue-rotate(354deg) brightness(106%) contrast(105%); */
 
 }
 .hireMe:active {
     color: rgb(186, 31, 49);
+   
 }
